--- a/diz.html
+++ b/diz.html
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
-                <li><a href="#">Servizi</a></li>
+                <li><a href="home.html#servizi">Servizi</a></li>
                 <li><a href="#">Chi Siamo</a></li>
                 <li><a href="#">Contatti</a></li>
             </ul>
@@ -414,7 +414,7 @@
             <div id="infoPopup" class="hidden">
                 <div class="popup-content">
                     <span id="closePopup">&times;</span>
-                    <p>Benvenuto su Muscle Lab! Clicca su una zona del corpo per vedere gli esercizi correlati.</p>
+                    <p>Benvenuto nel nostro dizionario di esercizi! Clicca su una zona del corpo per vedere gli esercizi correlati.</p>
                 </div>
             </div>
 
@@ -422,12 +422,11 @@
     </main>
     
 
-    <!-- Footer -->
     <footer>
         <p>&copy; 2025 Muscle Lab - Tutti i diritti riservati</p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="js/dict.js"></script>
 </body>
 </html>
 
