--- a/home.html
+++ b/home.html
@@ -17,8 +17,8 @@
             <nav>
                 <ul>
                     <li><a href="home.html">Home</a></li>
-                    <li><a href="#">Servizi</a></li>
-                    <li><a href="#">Servizi</a></li>
+                    <li><a href="#servizi">Servizi</a></li>
+                    <li><a href="#">Chi Siamo</a></li>
                     <li><a href="#">Contatti</a></li>
                 </ul>
             </nav>
@@ -45,7 +45,7 @@
     </section>
 
     <!-- Seconda Sezione Intro -->
-    <section class="intro-section second-intro">
+    <section class="intro-section second-intro" id="servizi">
         <div class="overlay"></div>
         <div class="container">
             <div class="intro-text">
@@ -64,7 +64,7 @@
                 </a>
                 
                 <!-- Box 2 -->
-                <a href="" class="service-link">
+                <a href="calc.html" class="service-link">
                     <div class="service-box">
                         <div class="box-icon">🔥</div>
                         <h3>Calcolatore TDEE</h3>
