--- a/home.html
+++ b/home.html
@@ -82,7 +82,7 @@
                 </a>
                 
                 <!-- Box 4 -->
-                <a href="" class="service-link">
+                <a href="challenge.html" class="service-link">
                     <div class="service-box">
                         <div class="box-icon">🏋️‍♂️</div>
                         <h3>Challenge Zone</h3>
@@ -92,7 +92,6 @@
             </div>
     </section>
 
-    <!-- Footer -->
     <footer>
         <p>&copy; 2025 Muscle Lab - Tutti i diritti riservati</p>
     </footer>
