--- a/challenge.html
+++ b/challenge.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Workout Famosi - Muscle Lab</title>
+  <title>Challenge Zone - MuscleLab</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -11,7 +11,7 @@
 
   <header class="main-header">
         <div class="logo">
-            <a href="home.html"><img src="img/logo.jpg" alt="Logo"></a>
+            <a href="home.html"><img src="img/logo.png" alt="Logo"></a>
         </div>
         <nav>
             <ul>
