--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muscle Lab - Home</title>
+    <title>MuscleLab - Home</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <section class="hero">
         <header>
             <div class="logo">
-                <a href="home.html"><img src="img/logo.jpg" alt="Logo"></a>
+                <a href="home.html"><img src="img/logo.png" alt="Logo"></a>
             </div>
             <nav>
                 <ul>
@@ -55,7 +55,7 @@
             
             <div class="services-grid">
                 <!-- Box 1 -->
-                <a href="" class="service-link">
+                <a href="gen.html" class="service-link">
                     <div class="service-box">
                         <div class="box-icon">📝</div>
                         <h3>Generatore di Schede</h3>
