--- a/calc.html
+++ b/calc.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muscle Lab - Home</title>
+    <title>TDEE Calculator - MuscleLab</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    
     <header class="main-header">
         <div class="logo">
-            <a href="home.html"><img src="img/logo.jpg" alt="Logo"></a>
+            <a href="home.html"><img src="img/logo.png" alt="Logo"></a>
         </div>
         <nav>
             <ul>
