--- a/gen.html
+++ b/gen.html
@@ -33,15 +33,17 @@
               <th>Esercizio</th>
               <th>Serie</th>
               <th>Ripetizioni</th>
+              <th>Peso(Kg)</th>
               <th>Rimuovi</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td><input type="text" placeholder="Es. Petto"></td>
-              <td><input type="text" placeholder="Es. Panca piana"></td>
-              <td><input type="number" min="1" placeholder="3"></td>
-              <td><input type="number" min="1" placeholder="12"></td>
+              <td><input type="text" placeholder="es. Petto"></td>
+              <td><input type="text" placeholder="es. Panca piana"></td>
+              <td><input type="number" min="1" placeholder="es. 3"></td>
+              <td><input type="number" min="1" placeholder="es. 12"></td>
+              <td><input type="number" min="1" placeholder="es. 20"></td>
               <td><button onclick="rimuoviRiga(this)">🗑️</button></td>
             </tr>
           </tbody>
