--- a/calc.html
+++ b/calc.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TDEE Calculator - MuscleLab</title>
+    <link rel="icon" href="img/favicon.png" type="image/png">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -16,8 +17,7 @@
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="home.html#servizi">Servizi</a></li>
-                <li><a href="#">Chi Siamo</a></li>
-                <li><a href="#">Contatti</a></li>
+                <li><a href="login.html">Login</a></li>
             </ul>
         </nav>
     </header>
