--- a/challenge.html
+++ b/challenge.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Challenge Zone - MuscleLab</title>
+  <link rel="icon" href="img/favicon.png" type="image/png">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -17,8 +18,7 @@
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="home.html#servizi">Servizi</a></li>
-                <li><a href="#">Chi Siamo</a></li>
-                <li><a href="#">Contatti</a></li>
+                <li><a href="login.html">Login</a></li>
             </ul>
         </nav>
     </header>
