--- a/diz.html
+++ b/diz.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dizionario Esercizi - MuscleLab</title>
+    <link rel="icon" href="img/favicon.png" type="image/png">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -18,7 +19,6 @@
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="home.html#servizi">Servizi</a></li>
-                <li><a href="#">Chi Siamo</a></li>
                 <li><a href="#">Contatti</a></li>
             </ul>
         </nav>
