--- a/gruppi/abs.html
+++ b/gruppi/abs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muscle Lab - Petto</title>
+    <title>MuscleLab - ABS</title>
     <link rel="stylesheet" href="../css/stylegruppi.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -44,6 +44,20 @@
                     Il Russian Twist è un esercizio che lavora principalmente sugli obliqui, ma coinvolge anche il core in generale. Si esegue seduti, 
                     con le gambe sollevate e il corpo inclinato indietro, mentre si ruota il busto da un lato all'altro tenendo le mani unite o un peso. Questo movimento di torsione aiuta a 
                     migliorare la stabilità del core e a tonificare i muscoli laterali dell'addome, utile anche per migliorare la postura e la forza generale.
+                </p>
+            </div>
+        </div>
+
+        <div class="exercise-block">
+            <div class="gif-container">
+                <img src="../img/legraises.gif" alt="Esercizio altlegrai">
+            </div>
+            <div class="exercise-description">
+                <h2>Alternating Leg Raises</h2>
+                <p>
+                    Gli alternating leg raises sono una variante dinamica del classico sollevamento gambe, ideale per stimolare l'addome in modo più controllato e ridurre il carico sulla zona lombare.
+                    Alternando il sollevamento di una gamba per volta mentre si è distesi supini, si intensifica il lavoro dei muscoli del retto addominale, in particolare della porzione inferiore, coinvolgendo anche i flessori dell’anca e migliorando la stabilità del core.
+                    Questo esercizio è particolarmente utile per chi vuole aumentare il controllo motorio e la resistenza addominale, ed è perfetto sia nei programmi di tonificazione sia nelle routine di functional training.
                 </p>
             </div>
         </div>
