--- a/gruppi/bicep.html
+++ b/gruppi/bicep.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MuscleLab - Petto</title>
+    <title>MuscleLab - Biceps</title>
     <link rel="stylesheet" href="../css/stylegruppi.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -20,13 +20,13 @@
 
         <div class="exercise-block">
             <div class="gif-container">
-                <img src="../img/curldum.gif" alt="Esercizio curlbar">
+                <img src="../img/curldum.gif" alt="Esercizio curldum">
             </div>
             <div class="exercise-description">
                 <h2>Curl Manubri</h2>
                 <p>
                     Il curl con i manubri è un esercizio fondamentale per lo sviluppo dei bicipiti. Permette un movimento più naturale delle braccia rispetto al bilanciere, 
-                    riducendo lo stress su polsi e gomiti. Eseguendolo in piedi o seduti, si lavora sull’isolamento muscolare e si può alternare il movimento per concentrarsi 
+                    riducendo lo stress su polsi e gomiti. Eseguendolo in piedi o seduti, si lavora sull'isolamento muscolare e si può alternare il movimento per concentrarsi 
                     su un braccio alla volta, migliorando equilibrio e simmetria.
                 </p>
             </div>
@@ -42,6 +42,20 @@
                     Il curl con bilanciere è uno degli esercizi più efficaci per aumentare la massa e la forza dei bicipiti. Utilizzando un bilanciere dritto o EZ, 
                     consente di sollevare carichi maggiori rispetto ai manubri, stimolando intensamente i muscoli. Una corretta esecuzione, senza slanci, 
                     garantisce il massimo reclutamento muscolare mantenendo la stabilità del core.
+                </p>
+            </div>
+        </div>
+
+        <div class="exercise-block">
+            <div class="gif-container">
+                <img src="../img/bayesiancurl.gif" alt="Esercizio bayesian">
+            </div>
+            <div class="exercise-description">
+                <h2>Bayesian Curl</h2>
+                <p>
+                    Il bayesian curl è un esercizio altamente efficace per isolare e sviluppare il muscolo bicipite, in particolare la porzione lunga.
+                    Sfruttando la tensione costante offerta dal cavo e la posizione inclinata del corpo, permette un allungamento maggiore del bicipite nella fase iniziale del movimento.
+                    Questo esercizio garantisce una stimolazione continua durante tutto il range di movimento, migliorando la connessione mente-muscolo e favorendo una crescita muscolare più completa e controllata.
                 </p>
             </div>
         </div>
