--- a/gruppi/tricep.html
+++ b/gruppi/tricep.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muscle Lab - Petto</title>
+    <title>MuscleLab - Triceps</title>
     <link rel="stylesheet" href="../css/stylegruppi.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -41,9 +41,22 @@
             <div class="exercise-description">
                 <h2>French Press</h2>
                 <p>
-                    La french press con manubrio singolo da seduto è un esercizio di isolamento per i tricipiti. Si esegue tenendo un manubrio con entrambe le mani sopra 
-                    la testa e abbassandolo dietro la nuca con controllo. Essendo in posizione seduta, aiuta a minimizzare il coinvolgimento del core e delle gambe, concentrando 
-                    il lavoro sul muscolo target. È ideale per aumentare definizione e forza nei tricipiti.
+                    La french press con manubrio singolo è un esercizio di isolamento per i tricipiti. Si esegue tenendo un manubrio con entrambe le mani sopra 
+                    la testa e abbassandolo dietro la nuca con controllo. È ideale per aumentare definizione e forza nei tricipiti.
+                </p>
+            </div>
+        </div>
+
+        <div class="exercise-block">
+            <div class="gif-container">
+                <img src="../img/pushdown.gif" alt="Esercizio pushdown">
+            </div>
+            <div class="exercise-description">
+                <h2>Triceps Pushdown</h2>
+                <p>
+                    Il triceps pushdown è un esercizio fondamentale per isolare e sviluppare la muscolatura del tricipite, con un'enfasi particolare sul capo laterale.
+                    Utilizzando una corda al cavo alto, questo movimento consente una maggiore escursione articolare e un'estensione completa delle braccia.
+                    È un esercizio perfetto per definire e rafforzare le braccia, ed è molto utilizzato sia nei programmi di ipertrofia sia nel conditioning generale.
                 </p>
             </div>
         </div>
