aggiunta per prova

--- a/public/gruppi/abs.html
+++ b/public/gruppi/abs.html
@@ -47,6 +47,20 @@
                 </p>
             </div>
         </div>
+
+        <div class="exercise-block">
+            <div class="gif-container">
+                <img src="../img/legraises.gif" alt="Esercizio altlegrai">
+            </div>
+            <div class="exercise-description">
+                <h2>Alternating Leg Raises</h2>
+                <p>
+                    Gli alternating leg raises sono una variante dinamica del classico sollevamento gambe, ideale per stimolare l'addome in modo più controllato e ridurre il carico sulla zona lombare.
+                    Alternando il sollevamento di una gamba per volta mentre si è distesi supini, si intensifica il lavoro dei muscoli del retto addominale, in particolare della porzione inferiore, coinvolgendo anche i flessori dell’anca e migliorando la stabilità del core.
+                    Questo esercizio è particolarmente utile per chi vuole aumentare il controllo motorio e la resistenza addominale, ed è perfetto sia nei programmi di tonificazione sia nelle routine di functional training.
+                </p>
+            </div>
+        </div>
     </div>
 
     <!-- Icone di navigazione -->
