--- a/public/calc.html
+++ b/public/calc.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TDEE Calculator - MuscleLab</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/favicon.png" type="image/png">
+
 </head>
 <body>
     
