--- a/public/diz.html
+++ b/public/diz.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dizionario Esercizi - MuscleLab</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/favicon.png" type="image/png">
 </head>
 
 
