--- a/public/gruppi/chest.html
+++ b/public/gruppi/chest.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muscle Lab - Petto</title>
+    <title>MuscleLab - Chest</title>
     <link rel="stylesheet" href="../css/stylegruppi.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -25,8 +25,8 @@
             <div class="exercise-description">
                 <h2>Push-up</h2>
                 <p>
-                    Le flessioni sono un esercizio a corpo libero che coinvolge principalmente i muscoli pettorali, deltoidi anteriori e tricipiti.
-                    Sono ottime per sviluppare forza nella parte superiore del corpo, stabilità del core e resistenza muscolare.
+                    i push-up sono un esercizio a corpo libero che coinvolge principalmente i muscoli pettorali, deltoidi anteriori e tricipiti.
+                    Sono ottimi per sviluppare forza nella parte superiore del corpo, stabilità del core e resistenza muscolare.
                     Possono essere eseguite ovunque, senza attrezzatura, e adattate a tutti i livelli di fitness.
                 </p>
             </div>
@@ -39,9 +39,23 @@
             <div class="exercise-description">
                 <h2>Chest Press</h2>
                 <p>
-                    La Chest Press è un esercizio fondamentale per sviluppare la forza e l’ipertrofia del muscolo pettorale. Può essere eseguita con bilanciere 
-                    o manubri, su panca piana, inclinata o declinata. Oltre ai pettorali, coinvolge anche i tricipiti e i deltoidi anteriori. È ideale per chi 
+                    La chest press è un esercizio fondamentale per sviluppare la forza e l'ipertrofia del muscolo pettorale. Può essere eseguita con bilanciere 
+                    o con manubri, su panca piana, inclinata o declinata. Oltre ai pettorali, coinvolge anche i tricipiti e i deltoidi anteriori. È ideale per chi 
                     vuole aumentare la massa muscolare nella parte superiore del torace.
+                </p>
+            </div>
+        </div>
+
+        <div class="exercise-block">
+            <div class="gif-container">
+                <img src="../img/chestflymachine.gif" alt="Esercizio Chest fly">
+            </div>
+            <div class="exercise-description">
+                <h2>Chest Fly</h2>
+                <p>
+                    La chest fly al macchinario è un esercizio mirato per isolare i muscoli pettorali, in particolare il grande pettorale.
+                    Grazie alla traiettoria guidata della macchina, consente un'esecuzione sicura e controllata, riducendo il coinvolgimento dei muscoli accessori e lo stress articolare su spalle e gomiti.
+                    È ideale per concentrarsi sulla contrazione muscolare e sull'allungamento del petto, rendendolo un ottimo complemento agli esercizi di spinta come la panca piana.
                 </p>
             </div>
         </div>
