--- a/public/gruppi/fem.html
+++ b/public/gruppi/fem.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muscle Lab - Petto</title>
+    <title>MuscleLab - Femorals</title>
     <link rel="stylesheet" href="../css/stylegruppi.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -26,8 +26,8 @@
                 <h2>Stacco Rumeno</h2>
                 <p>
                     Lo stacco rumeno è un esercizio mirato per sviluppare la catena posteriore, in particolare i muscoli ischiocrurali (femorali), i glutei e la zona lombare. 
-                    A differenza dello stacco tradizionale, mantiene le ginocchia leggermente flesse e focalizza il movimento sull’anca, enfatizzando l’allungamento controllato dei muscoli posteriori della coscia. 
-                    È ideale per migliorare la mobilità dell’anca, la forza funzionale e la stabilità del core, oltre a prevenire infortuni legati alla debolezza dei femorali.
+                    A differenza dello stacco tradizionale, mantiene le ginocchia leggermente flesse e focalizza il movimento sull'anca, enfatizzando l'allungamento controllato dei muscoli posteriori della coscia. 
+                    È ideale per migliorare la mobilità dell'anca, la forza funzionale e la stabilità del core, oltre a prevenire infortuni legati alla debolezza dei femorali.
                 </p>
             </div>
         </div>
@@ -40,12 +40,25 @@
                 <h2>Leg Curl</h2>
                 <p>
                     Il leg curl è un esercizio di isolamento che mira specificamente ai muscoli ischiocrurali (femorali), situati nella parte posteriore della coscia. Viene eseguito generalmente 
-                    con una macchina (sdraiato, seduto o in piedi), e consiste nel flettere il ginocchio contro una resistenza. È particolarmente utile per rafforzare i femorali, migliorare l’equilibrio muscolare tra 
+                    con una macchina (sdraiato, seduto o in piedi), e consiste nel flettere il ginocchio contro una resistenza. È particolarmente utile per rafforzare i femorali, migliorare l'equilibrio muscolare tra 
                     parte anteriore e posteriore della gamba e prevenire infortuni, soprattutto negli sport che coinvolgono corsa e sprint.
                 </p>
             </div>
         </div>
 
+        <div class="exercise-block">
+            <div class="gif-container">
+                <img src="../img/goodmorning.gif" alt="Esercizio goodmorning">
+            </div>
+            <div class="exercise-description">
+                <h2>Good Morning</h2>
+                <p>
+                    Il good morning con bilanciere è un esercizio altamente efficace per lo sviluppo dei femorali, durante l'esecuzione la flessione del busto in avanti con 
+                    il bilanciere sulle spalle stimola intensamente i muscoli posteriori della coscia, insieme a glutei e muscoli lombari.
+                    È particolarmente utile per migliorare la flessibilità e la forza dei femorali, spesso trascurati negli esercizi più comuni per le gambe.
+                </p>
+            </div>
+        </div>
     </div>
 
     <!-- Icone di navigazione -->
