--- a/public/gruppi/lat.html
+++ b/public/gruppi/lat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muscle Lab - Petto</title>
+    <title>MuscleLab - Lats</title>
     <link rel="stylesheet" href="../css/stylegruppi.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -42,6 +42,20 @@
                     Il rematore con manubri è un esercizio fondamentale per lo sviluppo della schiena, in particolare del grande dorsale, romboidi e trapezi. Si esegue piegandosi in 
                     avanti con la schiena dritta e portando i manubri verso il busto con un movimento controllato. Questo esercizio migliora la forza della parte superiore del corpo, 
                     la postura e la simmetria muscolare, oltre a coinvolgere anche i bicipiti come muscoli secondari.
+                </p>
+            </div>
+        </div>
+
+        <div class="exercise-block">
+            <div class="gif-container">
+                <img src="../img/seatedrow.gif" alt="Esercizio seatedrow">
+            </div>
+            <div class="exercise-description">
+                <h2>Seated Cable Row</h2>
+                <p>
+                    Il seated cable row è un esercizio completo per lo sviluppo della muscolatura della schiena, con particolare enfasi su gran dorsale.
+                    L'uso del cavo consente una resistenza costante durante tutto il movimento, favorendo una contrazione efficace in fase concentrica e un controllo ottimale in fase eccentrica.
+                    L'impugnatura neutra e la posizione seduta permettono di lavorare in modo mirato, minimizzando lo stress sulla zona lombare rispetto ad altri tipi di rematori.
                 </p>
             </div>
         </div>
