--- a/public/gruppi/quad.html
+++ b/public/gruppi/quad.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muscle Lab - Petto</title>
+    <title>MuscleLab - Quadriceps</title>
     <link rel="stylesheet" href="../css/stylegruppi.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -25,8 +25,8 @@
             <div class="exercise-description">
                 <h2>Affondo Bulgaro</h2>
                 <p>
-                    L’affondo bulgaro è un esercizio unilaterale avanzato che colpisce quadricipiti, glutei e femorali. Si esegue posizionando il piede posteriore su una panca o un rialzo, 
-                    mentre il piede anteriore rimane a terra per eseguire il movimento. Questo esercizio migliora l’equilibrio, la mobilità e la forza delle gambe, oltre a correggere eventuali 
+                    L'affondo bulgaro è un esercizio unilaterale avanzato che colpisce quadricipiti, glutei e femorali. Si esegue posizionando il piede posteriore su una panca o un rialzo, 
+                    mentre il piede anteriore rimane a terra per eseguire il movimento. Questo esercizio migliora l'equilibrio, la mobilità e la forza delle gambe, oltre a correggere eventuali 
                     asimmetrie muscolari tra i due lati del corpo.
                 </p>
             </div>
@@ -42,6 +42,20 @@
                     Il goblet squat è un esercizio composto che coinvolge principalmente i quadricipiti, i glutei e gli adduttori. Si esegue tenendo un manubrio 
                     o un kettlebell davanti al petto, il che aiuta a mantenere una postura più eretta e a migliorare la stabilità del core. È ideale sia per principianti che 
                     per atleti esperti grazie alla sua semplicità ed efficacia nel rafforzare la parte inferiore del corpo.
+                </p>
+            </div>
+        </div>
+
+        <div class="exercise-block">
+            <div class="gif-container">
+                <img src="../img/legextension.gif" alt="Esercizio legextension">
+            </div>
+            <div class="exercise-description">
+                <h2>Leg Extension</h2>
+                <p>
+                    La leg extension è un esercizio fondamentale per isolare e rafforzare il muscolo quadricipite, con particolare enfasi sul vasto mediale e sul retto femorale.
+                    Grazie all'utilizzo del macchinario, permette di concentrarsi sul movimento del ginocchio mantenendo la schiena stabile, riducendo il rischio di compensazioni.
+                    È ideale sia per sviluppare forza che per definire la muscolatura anteriore della coscia, offrendo una tensione costante durante l'intero arco del movimento.
                 </p>
             </div>
         </div>
