--- a/public/gruppi/shoulder.html
+++ b/public/gruppi/shoulder.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muscle Lab - Petto</title>
+    <title>MuscleLab - Shoulders</title>
     <link rel="stylesheet" href="../css/stylegruppi.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -42,6 +42,20 @@
                     Il pike push-up è una variante delle flessioni tradizionali che concentra il lavoro sulla parte superiore del corpo, in particolare sui deltoidi e sul trapezio. 
                     È un esercizio a corpo libero utile per sviluppare forza nelle spalle e nel core, e rappresenta una progressione ideale verso movimenti più avanzati come l'handstand push-up. 
                     L'angolazione del corpo simula un movimento di spinta verticale, rendendolo molto efficace anche senza attrezzi.
+                </p>
+            </div>
+        </div>
+
+        <div class="exercise-block">
+            <div class="gif-container">
+                <img src="../img/latraises.gif" alt="Esercizio latraises">
+            </div>
+            <div class="exercise-description">
+                <h2>Lat raises</h2>
+                <p>
+                    il lateral raises con manubri sono un esercizio fondamentale per isolare e sviluppare il fascio laterale dei deltoidi, contribuendo a dare larghezza e forma alle spalle.
+                    Grazie all'utilizzo dei manubri, si ottiene un controllo preciso del movimento, favorendo una contrazione muscolare mirata e riducendo il coinvolgimento di muscoli accessori.
+                    È un esercizio particolarmente efficace per enfatizzare l'estetica della parte superiore del corpo, migliorando la simmetria e la definizione delle spalle.
                 </p>
             </div>
         </div>
