--- a/public/scheda-detail.html
+++ b/public/scheda-detail.html
@@ -2,9 +2,11 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dettagli Scheda - MuscleLab</title>
-  <link rel="stylesheet" href="css/stylegruppi.css" />
+  <link rel="stylesheet" href="css/stylegruppi.css">
+  <link rel="icon" href="img/favicon.png" type="image/png">
+
 </head>
 <body>
   <div class="navbar">
