--- a/public/user.html
+++ b/public/user.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Profilo Utente - MuscleLab</title>
   <link rel="stylesheet" href="css/stylegruppi.css" />
+  <link rel="icon" href="img/favicon.png" type="image/png">
 </head>
 <body class="user-body">
   <div class="navbar">
