--- a/public/home.html
+++ b/public/home.html
@@ -89,6 +89,15 @@
                         <p>Cerchi ispirazione? Mettiti alla prova con i Workout più popolari</p>
                     </div>
                 </a>
+
+
+                <a href="map.html" class="service-link">
+                    <div class="service-box">
+                        <div class="box-icon">🗺️</div>
+                        <h3>gym map</h3>
+                        <p>trova il tuo posto ideale per allenarti!</p>
+                    </div>
+                </a>
             </div>
     </section>
 
