--- a/public/home.html
+++ b/public/home.html
@@ -86,7 +86,7 @@
                     <div class="service-box">
                         <div class="box-icon">🏋️‍♂️</div>
                         <h3>Challenge Zone</h3>
-                        <p>Cerchi ispirazione? Mettiti alla prova con i Workout più popolari</p>
+                        <p>Cerchi ispirazione? Mettiti alla prova con i Workout più popolari che ci sono.</p>
                     </div>
                 </a>
 
@@ -94,8 +94,8 @@
                 <a href="map.html" class="service-link">
                     <div class="service-box">
                         <div class="box-icon">🗺️</div>
-                        <h3>gym map</h3>
-                        <p>trova il tuo posto ideale per allenarti!</p>
+                        <h3>Gym Map</h3>
+                        <p>Scopri facilmente le migliori palestre nella tua zona grazie alla nostra mappa interattiva.</p>
                     </div>
                 </a>
             </div>
